# TETRIS-code

./: BaselineComparison.cpp  BaslineComparisonPlot.py  CMakeLists.txt  DataCorrection.py  ExactCount.cpp  Graph.cpp  GraphFormatConverter.cpp  GraphIO.cpp  GraphProperties.cpp  MakeComparisonPlot.py  MakePercentilePlot.py  MakePlot.py  MakeSamllFracComparison.py  MakeVariancePlot.py  README.md  accuracy.py  accuracy_comparison.py  degree_bin_plot.py  intro_plot.py  main.cpp  make_percentile_plot.py  sanitize.cpp  sanitize.h
config/: baseline-comparison-friendster.txt  baseline-comparison-orkut.txt  baseline-comparison-twitter.txt  datasets.ini  fb-A-anon-baseline.txt  fixed_one_seed.txt  flickr-baseline.txt  flickr-und-baseline.txt  friendster-baseline.txt  livejournal-baseline.txt  orkut-baseline.txt  sample_config.txt  scripts.txt  soc-sinaweibo.txt  twitter-baseline.txt
graphs/: ca-AstroPh.edges  small-test.edges  small-test.txt
include/: BaselineEstimators.h  ConfigReader.h  DegreeSquareSum.h  Digraph.h  ErrorCode.h  EstimateEdgeCount.h  EstimatorUtil.h  EstimatorUtilStats.h  EstimatorUtilStruct.h  FileIO.h  GetAllCounts.h  Graph.h  GraphIO.h  JointSort.h  TETRIS.h  Triadic.h  Triangle.h  TriangleEstimators.h  Utils.h
include/baseline/: SEC.h  SERWC.h  SubgraohRandomWalk_SRW.h  TripleMCMC.h  UESS.h  VertexMCMC.h
include/util/: BaselineUtil.h  ConfigReader.h  RandomWalkUtils.h  TrianglleCountUtil.h  UniformEdgeSampleCollection.h
output/: rename_script.sh
output/small-test.edges/: 2019-09-27_18:44:45-small-test.edges-EstTriByRWAndCountPerEdge-0.050000.txt
output/small-test.edges/EstTriByEdgeSampleAndCount/: 2019-09-27_19:00:55-small-test.edges-EstTriByEdgeSampleAndCount-0.050000.txt
output/small-test.edges/EstTriByRW/: 2019-09-27_19:00:55-small-test.edges-EstTriByRW-0.050000.txt
output/small-test.edges/EstTriByRWAndCountPerEdge/: 2019-09-27_18:45:53-small-test.edges-EstTriByRWAndCountPerEdge-0.050000.txt  2019-09-27_18:48:29-small-test.edges-EstTriByRWAndCountPerEdge-0.050000.txt
output/small-test.edges/EstTriByRWAndNeighborSample/: 2019-09-27_18:50:30-small-test.edges-EstTriByRWAndNeighborSample-0.050000.txt
output/soc-flickr-und.edges/EstTriByEdgeSampleAndCount/: 0.000100-2019-09-30_17:28:17-soc-flickr-und.edges-EstTriByEdgeSampleAndCount.txt  0.000100-2019-09-30_18:56:01-soc-flickr-und.edges-EstTriByEdgeSampleAndCount.txt  0.000200-2019-09-30_17:47:16-soc-flickr-und.edges-EstTriByEdgeSampleAndCount.txt  0.000200-2019-09-30_19:09:56-soc-flickr-und.edges-EstTriByEdgeSampleAndCount.txt  0.000250-2019-09-30_19:24:53-soc-flickr-und.edges-EstTriByEdgeSampleAndCount.txt  0.000300-2019-09-30_19:41:08-soc-flickr-und.edges-EstTriByEdgeSampleAndCount.txt  (+3 more)
(+756 files in other folders)
